--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+api.token=${API_TOKEN}
+api.url=${API_URL}
+#Not a web application so type is none if web then this can be changed to reactive or servlet
+spring.main.web-application-type=none
