--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,27 @@ repositories {
 	mavenCentral()
 }
 
+task fatJar(type: Jar) {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+	manifest {
+		attributes 'Main-Class': 'com.zendesk.ticketviewer.TicketviewerApplication'
+	}
+	archiveClassifier = "all"
+	from {
+		configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+	with jar
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'junit:junit:4.13.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
