--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,6 @@
-api.token=${API_TOKEN}
-api.url=${API_URL}
+api.token=1234
+api.url=https://zcczendeskcodingchallenge9230.zendesk.com/api/v2/
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
-logging.level.org.springframework.boot=OFF
 #Not a web application so type is none if web then this can be changed to reactive or servlet
 spring.main.web-application-type=none
